--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,12 @@ header a {
   text-decoration: none;
   font-weight: bold;
 }
+figure img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 main {
   flex: 1;
 }
