--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,6 +37,9 @@ main {
 .img-large {
   max-width: 100%;
 }
+.img-thumbnail {
+  height: 80px;
+}
 .products {
   display: flex;
   flex-wrap: wrap;
