--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -65,3 +65,11 @@ main {
 .small-container {
   max-width: 600px;
 }
+.checkout-steps > div {
+  border-bottom: 0.2rem solid whitesmoke;
+  color: gray;
+}
+.checkout-steps > div.active {
+  border-bottom: 0.2rem solid #f64a8a;
+  color: #f64a8a;
+}
